python 3.12: new generic replacing typevar

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - 'main'
-      - 'newtreealgos'
-      - 'rusty'
+      - '3.12'
+
 
 env:
   TEST_TAG: victorgabillon/chipiron:test
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest]
-        python-version: [ '3.11' ,'3.12' ]
+        python-version: [ '3.12' ]
 
     steps:
       - uses: jlumbroso/free-disk-space@main
@@ -37,9 +37,9 @@ jobs:
           docker-images: false
           swap-storage: true
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
