--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
 minversion = 4.23.2
-envlist =  py312, py313, flake8, mypy
+envlist =  py313, flake8, mypy
 isolated_build = true
 
 
 [gh-actions]
 python =
-    3.12: py312
     3.13: py313
 
 
@@ -23,7 +22,7 @@ commands =
 
 
 [testenv:mypy]
-basepython = python3.12
+basepython = python3.13
 deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
@@ -32,7 +31,7 @@ commands =
     mypy --strict chipiron
 
 [testenv:flake8]
-basepython = python3.12
+basepython = python3.13
 deps = flake8
 commands =
     flake8 chipiron
