--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 PyYAML
 
 ###### Requirements with Version Specifiers ######
-PySide6==6.6.2
+PySide6==6.8.1
 chess >= 1.11.0
 matplotlib>=3.8.2
 sortedcollections>=2.1.0
@@ -12,7 +12,7 @@ torch>=2.2.1
 numba>=0.59.0rc1
 graphviz>=0.20.1
 dacite >= 1.8.1
-customtkinter
+customtkinter>=5.2
 pyarrow
 shakmaty_python_binding >=0.1.5
 
