adding hierachy visualisation with gprof2dot and script base output logic

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ platforms = linux
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages =
@@ -33,8 +33,9 @@ install_requires =
     gunicorn
     werkzeug
     bootstrap-flask
+    gprof2dot
 
-python_requires = >=3.11
+python_requires = >=3.12
 package_dir =
     =.
 zip_safe = no
