adding the possibility to choose the board representation and adding a fix for representation364 that is invariant as intended and adding test for it

--- a/data/players/player_config/RecurZipfBase4.yaml
+++ b/data/players/player_config/RecurZipfBase4.yaml
@@ -16,6 +16,6 @@ main_move_selector:
     neural_network:
       nn_type: pp2d2_2
       nn_param_folder_name: 'base'
-    representation: '364'
+    representation_type: '364_bug'
     syzygy_evaluation: True
 syzygy_play: True
