--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,7 @@
 pytest>=8.1.1
 pytest-cov>=4.1
 mypy>=1.14.0
-flake8>=7.0
+flake8>=7.1.1
 tox>=4.23.2
 types-PyYAML>=6.0.12.12
-isort
+isort>=5.13.2
