--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Test o
         run: |
-          docker run -u=$(id -u $USER):$(id -g $USER) -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --rm ${{ env.TEST_TAG }} python3.12 tests/integration_test/one_match/test_integration.py stock
+          docker run -u=$(id -u $USER):$(id -g $USER) -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --rm ${{ env.TEST_TAG }} python3.12 tests/integration_test/one_match/test_integration.py
 
       -
         name: Build and push
