--- a/data/players/player_config/RecurZipfBase4.yaml
+++ b/data/players/player_config/RecurZipfBase4.yaml
@@ -13,7 +13,7 @@ main_move_selector:
       tree_move_limit: 1000
   board_evaluator:
     type: neural_network
-    path_to_nn_folder: 'data/players/board_evaluators/nn_pytorch/nn_pp2d2_2/base'
-    internal_representation_type: '364_bug'
+    path_to_nn_folder: 'chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/prelu_no_bug2/'
+    internal_representation_type: '364_no_bug'
     syzygy_evaluation: True
 syzygy_play: True
