update linting, transformer and starting learning from scratch

--- a/chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/architectures/architecture_transformerone.yaml
+++ b/chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/architectures/architecture_transformerone.yaml
@@ -1,4 +1,4 @@
 model_input_representation_type: piece_map
 model_output_type:
-  point_of_view: white
+  point_of_view: player_to_move
 model_type: transformerone
