--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,9 +1,9 @@
-pytest>=8.1.1
-pytest-cov>=4.1
+pytest>=8.3.5
+pytest-cov>=6.0.0
 mypy>=1.15.0
 flake8>=7.1.1
-tox>=4.23.2
+tox>=4.25.0
 types-PyYAML>=6.0.12.12
-isort>=5.13.2
-black
+isort>=6.0.1
+black>=25.1.0
 
