--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,11 @@ packages =
 
 install_requires =
     PyYAML>=6.0
-    PySide6==6.6.2
+    PySide6==6.9.1
     chess >= 1.10.0
     matplotlib>=3.8.2
     sortedcollections>=2.1.0
-    pandas>=2.1.4
+    pandas>=2.3.0
     numpy>=1.26.0
     numba>=0.59.0rc1
     graphviz>=0.20.1
@@ -35,6 +35,7 @@ install_requires =
     werkzeug
     bootstrap-flask
     gprof2dot
+    gdown
 
 python_requires = >=3.12
 package_dir =
