polishing the ci/cd

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 [tox]
 minversion = 4.23.2
-envlist =  py312, py313, flake8, mypy, isort, black
+envlist =  py312, flake8, mypy, isort, black
 isolated_build = true
 
 
 [gh-actions]
 python =
     3.12: py312, mypy, flake8, isort
-    3.13: py313
 
 
 [testenv]
@@ -16,12 +15,16 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
+    pytest
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} --ignore=chipiron/scripts/script_gui/test/test_script_gui.py # for some reason script gui fails atm in tox but works otherwise
 
 
 [testenv:black]
+basepython = python3.12
 deps =
+    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
     black
 commands =
     black --check --diff chipiron
@@ -32,18 +35,26 @@ basepython = python3.12
 deps =
     -r{toxinidir}/requirements_dev.txt
     -r{toxinidir}/requirements.txt
-    mypy>=1.14.0
+    mypy>=1.16.1
 commands =
     mypy --strict chipiron
 
 [testenv:flake8]
 basepython = python3.12
-deps = flake8
+deps =
+    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
+    flake8
 commands =
     flake8 --ignore=E203,E266,E501,W503,F403,F401,E704 chipiron
 
 
-[isort]
+[testenv:isort]
+basepython = python3.12
+deps =
+    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
+    isort
 profile = black
 multi_line_output = 3
 commands =
