--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@
 PyYAML
 
 ###### Requirements with Version Specifiers ######
-PySide6==6.9.1
+PySide6==6.6.2
 chess >= 1.11.2
 matplotlib>=3.8.2
 sortedcollections>=2.1.0
-pandas>=2.3.0
-numpy>=1.26.0
-torch>=2.6.0
+pandas==2.2.0
+numpy==1.26.0
+torch>=2.7.1
 torchinfo
 numba>=0.59.0rc1
 graphviz>=0.20.1
