--- a/setup.cfg
+++ b/setup.cfg
@@ -16,18 +16,18 @@ packages =
 
 install_requires =
     PyYAML>=6.0
-    PySide6==6.9.1
-    chess >= 1.10.0
+    PySide6==6.6.2
+    chess >= 1.11.2
     matplotlib>=3.8.2
     sortedcollections>=2.1.0
-    pandas>=2.3.0
-    numpy>=1.26.0
+    pandas==2.2.0
+    numpy==1.26.0
     numba>=0.59.0rc1
     graphviz>=0.20.1
-    dacite >= 1.8.1
+    dacite >= 1.9.2
     customtkinter>=5.2
     parsley_coco>=0.1.23
-    torch>=2.2.1   # commented to make github action not have a memory overflow
+    torch>=2.7.1   # commented to make github action not have a memory overflow
                     # but needs to be uncommented for readthedocs compilation
     flask
     flask_cors
