improve ignore files, making docker file for flask lighter, improving notes and readme with respect to website, decoupling the display in the lib, making chipiron creation parametrized, updating flask, updating requiremeents, test_ flask app

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -13,7 +13,22 @@
 .git
 .gitignore
 
+
 # Python pycache:
 __pycache__/
 # Ignored by the build system
 /setup.cfg
+
+**/*outputs/*
+
+.tox
+.mypy_cache
+
+data/syzygy-tables/
+data/data_chipiron/
+data/puzzles/
+data/reference_games/
+data/trees/
+
+chipiron/scripts/stockfish/
+chipiron/displays
