--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ python =
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements/dev.txt
     -r{toxinidir}/requirements.txt
     pytest
 commands =
@@ -23,7 +23,7 @@ commands =
 [testenv:black]
 basepython = python3.12
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements/dev.txt
     -r{toxinidir}/requirements.txt
     black
 commands =
@@ -33,7 +33,7 @@ commands =
 [testenv:mypy]
 basepython = python3.12
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements/dev.txt
     -r{toxinidir}/requirements.txt
     mypy>=1.16.1
 commands =
@@ -42,7 +42,7 @@ commands =
 [testenv:flake8]
 basepython = python3.12
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements/dev.txt
     -r{toxinidir}/requirements.txt
     flake8
 commands =
@@ -52,7 +52,7 @@ commands =
 [testenv:isort]
 basepython = python3.12
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements/dev.txt
     -r{toxinidir}/requirements.txt
     isort
 profile = black
