--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -31,7 +31,7 @@ RUN rm /usr/lib/python*/EXTERNALLY-MANAGED && \
 
 RUN python3 -m pip install torch==2.2.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 
-ADD ./requirements_light.txt requirements.txt
+ADD ./requirements/base.txt requirements.txt
 ADD ./MakefileForTest.mk Makefile
 
 RUN .venv/bin/pip install --upgrade pip
