--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,40 @@
 [tox]
 minversion = 4.23.2
-envlist =  py312, flake8, mypy, isort, black
+envlist = py312, flake8, mypy, isort, black
 isolated_build = true
-
 
 [gh-actions]
 python =
     3.12: py312, mypy, flake8, isort
 
-
 [testenv]
-changedir = {envtmpdir}
 setenv =
     PYTHONPATH =
 deps =
     build
     -r{toxinidir}/requirements_dev.txt
     pytest
+
+[testenv:py312]
+changedir = {envtmpdir}
 commands_pre =
     python -c "import shutil; shutil.rmtree('{toxinidir}/dist', ignore_errors=True)"
     python -m build --sdist --wheel --outdir {toxinidir}/dist {toxinidir}
+    python -c 'import shutil, os; src=os.path.join("{toxinidir}", "tests"); dst="tests"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.abspath(src) != os.path.abspath(dst) else print("Skipping self-copy")'    ...
+    python -c 'import shutil; shutil.copytree("{toxinidir}/chipiron/scripts", "chipiron/scripts", dirs_exist_ok=True)'
     python -c "import os; print(os.listdir('{toxinidir}/dist'))"
     python -c "import glob, subprocess; subprocess.check_call(['pip', 'install', glob.glob('{toxinidir}/dist/*.tar.gz')[0]])"
 commands =
     python -c "import chipiron; print(chipiron.__file__)"
-    #pytest --pyargs chipiron --basetemp={envtmpdir}/pytest-tmp --ignore=chipiron/scripts/script_gui/test/test_script_gui.py # for some reason script gui fails atm in tox but works otherwise
     pytest --pyargs chipiron --basetemp={envtmpdir}/pytest-tmp
 
 [testenv:black]
 basepython = python3.12
 deps =
     -r{toxinidir}/requirements_dev.txt
-    black
+    black>=25.0.1
 commands =
     black --check --diff chipiron
-
 
 [testenv:mypy]
 basepython = python3.12
@@ -51,7 +51,6 @@ deps =
     flake8
 commands =
     flake8 --ignore=E203,E266,E501,W503,F403,F401,E704 chipiron
-
 
 [testenv:isort]
 basepython = python3.12
