--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,8 @@ commands_pre =
     python -m build --sdist --wheel --outdir {toxinidir}/dist {toxinidir}
     python -c 'import shutil, os; src=os.path.join("{toxinidir}", "tests"); dst="tests"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.abspath(src) != os.path.abspath(dst) else print("Skipping self-copy")'    ...
     python -c 'import shutil; shutil.copytree("{toxinidir}/chipiron/scripts", "chipiron/scripts", dirs_exist_ok=True)'
+    python -c 'import shutil; shutil.copytree("{toxinidir}/external_data/trees", "external_data/trees", dirs_exist_ok=True)'
+
     python -c "import os; print(os.listdir('{toxinidir}/dist'))"
     python -c "import glob, subprocess; subprocess.check_call(['pip', 'install', glob.glob('{toxinidir}/dist/*.tar.gz')[0]])"
 commands =
