--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,8 +69,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile.test
-          dockerfile: Dockerfile.test
+          file: Dockerfile
+          dockerfile: Dockerfile
           push: true
           tags: ${{ env.TEST_TAG }}
 
@@ -82,7 +82,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile.test
-          dockerfile: Dockerfile.test
+          file: Dockerfile
+          dockerfile: Dockerfile
           push: true
           tags: ${{ env.LATEST_TAG }}
