update path and docker and tox

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands_pre =
     python -c "import glob, subprocess; subprocess.check_call(['pip', 'install', glob.glob('{toxinidir}/dist/*.tar.gz')[0]])"
 commands =
     python -c "import chipiron; print(chipiron.__file__)"
-    pytest --pyargs chipiron --basetemp={envtmpdir}/pytest-tmp
+    pytest --pyargs chipiron --basetemp={envtmpdir}/pytest-tmp --ignore=chipiron/scripts/script_gui/test/test_script_gui.py
 
 [testenv:black]
 basepython = python3.12
