--- a/chipiron/data/players/player_config/RecurZipfSequool.yaml
+++ b/chipiron/data/players/player_config/RecurZipfSequool.yaml
@@ -18,8 +18,8 @@ main_move_selector:
     internal_representation_type: '364_bug'
     syzygy_evaluation: True
     neural_nets_model_and_architecture:
-      model_weights_file_name: "chipiron/data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
-      nn_architecture_args_path_to_yaml_file: 'chipiron/data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
+      model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
+      nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
 syzygy_play: True
 
 
