--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands_pre =
     python -m build --sdist --wheel --outdir {toxinidir}/dist {toxinidir}
     python -c 'import shutil, os; src=os.path.join("{toxinidir}", "tests"); dst="tests"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.abspath(src) != os.path.abspath(dst) else print("Skipping self-copy")'    ...
     python -c 'import shutil; shutil.copytree("{toxinidir}/chipiron/scripts", "chipiron/scripts", dirs_exist_ok=True)'
-    python -c 'import shutil, os; src="{toxinidir}/external_data/trees"; dst="external_data/trees"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.exists(src) else print(f"Skipping copy: {src} does not exist")'
+    python -c 'import shutil, os; src="{toxinidir}/tests/data/trees"; dst="external_data/trees"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.exists(src) else print(f"Skipping copy: {src} does not exist")'
 
 
     python -c "import os; print(os.listdir('{toxinidir}/dist'))"
