--- a/chipiron/data/players/player_config/RecurZipfBase4.yaml
+++ b/chipiron/data/players/player_config/RecurZipfBase4.yaml
@@ -15,6 +15,7 @@ main_move_selector:
     type: neural_network
     internal_representation_type: '364_bug'
     syzygy_evaluation: True
+    evaluation_scale: stockfish_based
     neural_nets_model_and_architecture:
       model_weights_file_name: "chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
       nn_architecture_args_path_to_yaml_file: 'chipiron/scripts/learn_nn_supervised/board_evaluators_common_training_data/nn_pytorch/prelu_no_bug/architecture.yaml'
