--- a/chipiron/data/players/player_config/Uniform.yaml
+++ b/chipiron/data/players/player_config/Uniform.yaml
@@ -14,6 +14,7 @@ main_move_selector:
     type: neural_network
     internal_representation_type: '364_bug'
     syzygy_evaluation: True
+    evaluation_scale: stockfish_based
     neural_nets_model_and_architecture:
       model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
       nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
