--- a/chipiron/data/players/player_config/UniformDepth2.yaml
+++ b/chipiron/data/players/player_config/UniformDepth2.yaml
@@ -15,4 +15,5 @@ main_move_selector:
     path_to_nn_folder: 'chipiron/data/players/board_evaluators/nn_pytorch/nn_pp2d2_2_prelu/param_prelu'
     internal_representation_type: '364_bug'
     syzygy_evaluation: True
+    evaluation_scale: stockfish_based
 syzygy_play: True
