--- a/chipiron/data/players/player_config/Uniformbase.yaml
+++ b/chipiron/data/players/player_config/Uniformbase.yaml
@@ -3,7 +3,7 @@ main_move_selector:
   type: TreeAndValue
   node_selector:
     type: Uniform
-    
+
   opening_type: all_children
   recommender_rule:
     type: almost_equal_logistic
@@ -15,4 +15,5 @@ main_move_selector:
     type: basic_evaluation
     syzygy_evaluation: True
     representation_type: 'no'
+    evaluation_scale: stockfish_based
 syzygy_play: True
