--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,7 +65,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox tox-gh-actions
           sudo apt-get update
-          sudo apt -y install libegl1
+          sudo apt -y install libegl1 libgl1
+          sudo apt-get install -y libxkbcommon-x11-0
       - name: Test with tox
         run: tox
 
