stockfish back in makefile and test but optional, improving generate board

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "gprof2dot",
     "mlflow",
     "parsley_coco>=0.1.27",
-    "gdown"
+    "gdown",
+    "zstandard"
 ]
 license = "GPL-3.0-only"
 license-files = ["LICENSE"]
