--- a/chipiron/data/players/board_evaluator_config/base_chipiron_board_eval.yaml
+++ b/chipiron/data/players/board_evaluator_config/base_chipiron_board_eval.yaml
@@ -1,9 +1,5 @@
 board_evaluator:
-  neural_network:
-    nn_type: pp2d2_2_prelu
-    nn_param_folder_name: 'param_prelu'
-    representation: '364'
-
-
-
-
+  type: "neural_network"
+  neural_nets_model_and_architecture:
+    model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
+    nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
