--- a/chipiron/data/players/player_config/UniformDepth2.yaml
+++ b/chipiron/data/players/player_config/UniformDepth2.yaml
@@ -10,10 +10,14 @@ main_move_selector:
   stopping_criterion:
       type: depth_limit
       depth_limit: 2
-  board_evaluator:
-    type: neural_network
-    path_to_nn_folder: 'chipiron/data/players/board_evaluators/nn_pytorch/nn_pp2d2_2_prelu/param_prelu'
+  node_evaluator:
     internal_representation_type: '364_bug'
-    syzygy_evaluation: True
-    evaluation_scale: stockfish_based
+    master_board_evaluator:
+      syzygy_evaluation: True
+      evaluation_scale: stockfish_based
+      board_evaluator:
+        type: neural_network
+        neural_nets_model_and_architecture:
+          model_weights_file_name: "package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/param_multi_layer_perceptron_772_20_1_parametric_relu_hyperbolic_tangent_364_no_bug_player_to_move.pt"
+          nn_architecture_args_path_to_yaml_file: 'package://data/players/board_evaluators/nn_pytorch/prelu_no_bug/architecture.yaml'
 syzygy_play: True
