--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,13 +12,11 @@ coverage
 pytest-cov>=6.0.0
 
 # Linting & formatting
-flake8>=7.3.0
-black>=25.1.0
-isort>=6.0.1
+ruff>=0.12.11
 pylint
 
 # Type checking
-mypy>=1.16.1
+mypy>=1.17.1
 
 # Building & publishing
 build
