--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-minversion = 4.23.2
-envlist = py312, flake8, mypy, isort, black
+minversion = 4.28.4
+envlist = py312, mypy, ruff
 isolated_build = true
 
 [gh-actions]
 python =
-    3.12: py312, mypy, flake8, isort
+    3.12: py312, mypy, ruff
 
 [testenv]
 setenv =
@@ -20,10 +20,9 @@ changedir = {envtmpdir}
 commands_pre =
     python -c "import shutil; shutil.rmtree('{toxinidir}/dist', ignore_errors=True)"
     python -m build --sdist --wheel --outdir {toxinidir}/dist {toxinidir}
-    python -c 'import shutil, os; src=os.path.join("{toxinidir}", "tests"); dst="tests"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.abspath(src) != os.path.abspath(dst) else print("Skipping self-copy")'    ...
+    python -c 'import shutil, os; src=os.path.join("{toxinidir}", "tests"); dst="tests"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.abspath(src) != os.path.abspath(dst) else print("Skipping self-copy")'
     python -c 'import shutil; shutil.copytree("{toxinidir}/chipiron/scripts", "chipiron/scripts", dirs_exist_ok=True)'
     python -c 'import shutil, os; src="{toxinidir}/tests/data/trees"; dst="external_data/trees"; shutil.copytree(src, dst, dirs_exist_ok=True) if os.path.exists(src) else print(f"Skipping copy: {src} does not exist")'
-
 
     python -c "import os; print(os.listdir('{toxinidir}/dist'))"
     python -c "import glob, subprocess; subprocess.check_call(['pip', 'install', glob.glob('{toxinidir}/dist/*.tar.gz')[0]])"
@@ -31,40 +30,21 @@ commands =
     python -c "import chipiron; print(chipiron.__file__)"
     pytest --pyargs chipiron --basetemp={envtmpdir}/pytest-tmp --ignore=chipiron/scripts/script_gui/test/test_script_gui.py
 
-[testenv:black]
-basepython = python3.12
-deps =
-    -r{toxinidir}/requirements_dev.txt
-    black>=25.0.1
-commands =
-    black --check --diff chipiron
-
 [testenv:mypy]
 basepython = python3.12
 deps =
     -r{toxinidir}/requirements_dev.txt
-    mypy>=1.16.1
+    mypy>=1.17.1
 commands =
     mypy --strict chipiron
 
-[testenv:flake8]
+[testenv:ruff]
 basepython = python3.12
 deps =
     -r{toxinidir}/requirements_dev.txt
-    flake8
+    ruff>=0.12.11
 commands =
-    flake8 --ignore=E203,E266,E501,W503,F403,F401,E704 chipiron
-
-[testenv:isort]
-basepython = python3.12
-deps =
-    -r{toxinidir}/requirements_dev.txt
-    isort
-profile = black
-multi_line_output = 3
-commands =
-    isort .
-
-[pycodestyle]
-max-line-length = 88
-ignore = E203,E701
+    # Format code like Black
+    ruff format --check chipiron
+    # Lint + autofix (removes unused imports, sorts imports, etc.)
+    ruff check --fix chipiron
