--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,11 +142,11 @@ line-length = 88
 target-version = "py312"
 
 # Enable import sorting (alphabetical + group order)
-select = ["I", "F", "E"]  # I = imports, F = pyflakes, E = pycodestyle
+lint.select = ["I", "F", "E"]  # I = imports, F = pyflakes, E = pycodestyle
 
 # Ignore rules you don't care about
-ignore = [ "E501"]
+lint.ignore = [ "E501"]
 
 # Optional: add your first-party package to extend the known group
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # If needed, can add file-specific ignores
