--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "parsley_coco>=0.1.27",
     "gdown",
     "zstandard"
+    "rich"
 ]
 license = "GPL-3.0-only"
 license-files = ["LICENSE"]
