--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,7 +101,7 @@ jobs:
 
       - name: Test o
         run: |
-          docker run -u=$(id -u $USER):$(id -g $USER) -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --rm ${{ env.TEST_TAG }} python tests/integration_test/one_match/test_integration.py
+          docker run -u=$(id -u $USER):$(id -g $USER) -e DISPLAY=$DISPLAY -v /tmp/.X11-unix:/tmp/.X11-unix:rw --rm ${{ env.TEST_TAG }} python tests/integration_test/one_match/test_integration.py --log_level ERROR
       -
         name: Build and push
         uses: docker/build-push-action@v5
