--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,18 +12,18 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "PyYAML",
-    "PySide6==6.6.2",
+    "PySide6==6.9.2",
     "chess>=1.11.2",
     "matplotlib>=3.8.2",
     "sortedcollections>=2.1.0",
     "pandas==2.2.0",
-    "numpy==1.26.0",
+    "numpy==1.26.4",
     "torch>=2.2.2",
     "torchinfo",
-    "numba>=0.59.0rc1",
+    "numba>=0.61.2",
     "graphviz>=0.20.1",
     "dacite>=1.9.2",
     "customtkinter>=5.2",
