--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,10 @@ dependencies = [
     "PyYAML",
     "PySide6==6.9.2",
     "chess>=1.11.2",
-    "matplotlib>=3.8.2",
+    "plotly>=6.3.0",
     "sortedcollections>=2.1.0",
     "pandas==2.3.2",
-    "numpy==1.26.4",
+    "numpy==2.2.6",
     "torch>=2.8.0",
     "torchinfo",
     "numba>=0.61.2",
