linting wrt to parlsey, docs, precommit hook with ruff, more pyright

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -177,3 +177,4 @@ pythonVersion = "3.13"
 typeCheckingMode = "strict"
 reportMissingImports = true
 reportUnusedImport = true
+reportMissingTypeStubs = false
