more pyright linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -178,3 +178,5 @@ typeCheckingMode = "strict"
 reportMissingImports = true
 reportUnusedImport = true
 reportMissingTypeStubs = false
+reportUnknownMemberType = false
+reportPrivateImportUsage = false
