change the Matchs Args setting logic to use directly parsley, linting, docs, improve logging setter and parser, cange logic in main chipiron, change gui for script

--- a/chipiron/data/settings/OneMatch/setting_jime.yaml
+++ b/chipiron/data/settings/OneMatch/setting_jime.yaml
@@ -1,3 +1,3 @@
 number_of_games_player_one_white: 1
 number_of_games_player_one_black: 0
-game_setting_file: setting_navo.yaml
+game_args: setting_navo
