--- a/chipiron/data/settings/OneMatch/setting_duda.yaml
+++ b/chipiron/data/settings/OneMatch/setting_duda.yaml
@@ -1,3 +1,3 @@
 number_of_games_player_one_white: 200
 number_of_games_player_one_black: 200
-game_setting_file: setting_navo.yaml
+game_args: setting_navo
