--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-minversion = 4.28.4
-envlist = py313, mypy, ruff
+minversion = 4.30.2
+envlist = py313, mypy, ruff, pyright
 isolated_build = true
 
 [gh-actions]
 python =
-    3.13: py313, mypy, ruff
+    3.13: py313, mypy, ruff, pyright
 
 [testenv]
 setenv =
@@ -48,3 +48,11 @@ commands =
     ruff format --check chipiron
     # Lint + autofix (removes unused imports, sorts imports, etc.)
     ruff check --fix chipiron
+
+[testenv:pyright]
+basepython = python3.13
+deps =
+    -r{toxinidir}/requirements_dev.txt
+    pyright>=1.1.405
+commands =
+    pyright chipiron
