--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,7 +3,7 @@
 # Install with: pip install -r requirements-dev.txt
 
 # Automation
-tox>=4.27.0
+tox>=4.30.2
 types-PyYAML>=6.0.12.12
 
 # Testing
@@ -18,6 +18,7 @@ black>=25.1.0
 
 # Type checking
 mypy>=1.18.1
+pyright>=1.1.405
 
 # Building & publishing
 build
