--- a/chipiron/scripts/learn_from_scratch_value_and_fixed_boards/tests/test_exp_options.yaml
+++ b/chipiron/scripts/learn_from_scratch_value_and_fixed_boards/tests/test_exp_options.yaml
@@ -45,8 +45,8 @@ evaluating_player_args:
       type: almost_equal_logistic
       temperature: 2
     stopping_criterion:
-      type: tree_move_limit
-      tree_move_limit: 1000
+      type: tree_branch_limit
+      tree_branch_limit: 1000
     board_evaluator:
       type: neural_network
       path_to_nn_folder: 'chipiron/data/players/board_evaluators/nn_pytorch/nn_pp2d2_2_prelu/param_prelu'
