--- a/chipiron/data/settings/GameSettings/setting_navo.yaml
+++ b/chipiron/data/settings/GameSettings/setting_navo.yaml
@@ -8,5 +8,5 @@ starting_position:
   type: from_file
   file_name: Board1.text
 #starting_position:
-#  type: fen
+#  type: Fen
 #  fen: 'r6r/pp1b1kp1/4pn2/q1bp3p/1n3Q2/2NBP3/PPP2PPP/R1B1K1R1 w Q - 4 12'
