--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "zstandard",
     "rich",
     "valanga>=0.1.4",
-    "atomheart>=0.1.2",
+    "atomheart>=0.1.3",
     "algorhino-coral",
     "algorhino-anemone>=0.1.3",
 ]
@@ -275,10 +275,10 @@ deps = [
   "gdown",
   "zstandard",
   "rich",
-  "valanga",
-  "atomheart",
+  "valanga>=0.1.4",
+  "atomheart=0.1.3",
   "algorhino-coral",
-  "algorhino-anemone",
+  "algorhino-anemone=0.1.3",
 ]
 set_env = { PYTHONPATH = "{toxinidir}" }
 commands = [
@@ -315,10 +315,10 @@ deps = [
   "gdown",
   "zstandard",
   "rich",
-  "valanga",
-  "atomheart",
+  "valanga=0.1.4",
+  "atomheart=0.1.3",
   "algorhino-coral",
-  "algorhino-anemone",
+  "algorhino-anemone=0.1.3",
 ]
 set_env = { MYPYPATH = "{toxinidir}" }
 commands = [
